--- a/index.html
+++ b/index.html
@@ -5,36 +5,34 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Data Scientist - Científico de Datos</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css">
-    <link rel="stylesheet" href="css/Rayas.css">
+    <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
-    <div class="container-fluid px-0">
+    <div class="full-width-container">
         <header class="header-banner">
-            <div class="container">
+            <div class="container-fluid">
                 <h1 class="display-4 text-white">Data Scientist</h1>
                 <h2 class="text-white">Científico de datos</h2>
             </div>
         </header>
 
-        <section class="container my-5">
-            <div class="row">
-                <div class="col-md-12">
-                    <p>La ciencia de datos es un campo interdisciplinario que combina estadística, programación y conocimiento del dominio para extraer insights valiosos de datos estructurados o no estructurados. Utiliza técnicas como machine learning, minería de datos y visualización para analizar patrones, predecir tendencias y mejorar la toma de decisiones.</p>
-                    <p>Aplicaciones comunes incluyen recomendaciones (ej. Netflix), detección de fraudes, análisis de mercado y automatización de procesos. Su ciclo incluye recolección, limpieza, modelado e interpretación de datos, requiriendo herramientas como Python, R, SQL y frameworks como TensorFlow o PyTorch. En esencia, transforma datos en conocimiento accionable.</p>
-                </div>
+        <section class="full-width-section">
+            <div class="full-width-text">
+                <p class="lead">La ciencia de datos es un campo interdisciplinario que combina estadística, programación y conocimiento del dominio para extraer insights valiosos de datos estructurados o no estructurados. Utiliza técnicas como machine learning, minería de datos y visualización para analizar patrones, predecir tendencias y mejorar la toma de decisiones.</p>
+                <p class="lead">Aplicaciones comunes incluyen recomendaciones (ej. Netflix), detección de fraudes, análisis de mercado y automatización de procesos. Su ciclo incluye recolección, limpieza, modelado e interpretación de datos, requiriendo herramientas como Python, R, SQL y frameworks como TensorFlow o PyTorch. En esencia, transforma datos en conocimiento accionable.</p>
             </div>
         </section>
 
-        <section class="container my-5">
+        <section class="full-width-section">
             <div class="row align-items-center">
-                <div class="col-md-4 mb-4">
+                <div class="col-lg-4 col-md-5 mb-4">
                     <img src="images/perfil14.jpg" class="img-fluid rounded" alt="Habilidades Técnicas">
                 </div>
-                <div class="col-md-8">
+                <div class="col-lg-8 col-md-7">
                     <h3 class="skill-title">Habilidades Técnicas</h3>
                     <ul class="skill-list">
-                        <li>Domina Python y R</li>
-                        <li>Familiarízate con SQL para la manipulación y consulta de bases de datos</li>
+                        <li>Domina Python y R para análisis de datos y desarrollo de modelos</li>
+                        <li>Familiarízate con SQL avanzado para la manipulación y consulta eficiente de bases de datos relacionales</li>
                         <li>Refuerza conocimientos en estadística, probabilidad y matemáticas aplicadas</li>
                         <li>Estudia los fundamentos y aplicaciones prácticas del machine learning</li>
                         <li>Trabaja en proyectos con algoritmos de aprendizaje supervisado y no supervisado</li>
@@ -43,12 +41,12 @@
             </div>
         </section>
 
-        <section class="container my-5">
+        <section class="full-width-section">
             <div class="row align-items-center">
-                <div class="col-md-4 mb-4">
+                <div class="col-lg-4 col-md-5 mb-4">
                     <img src="images/perfil12.jpg" class="img-fluid rounded" alt="Habilidades Blandas">
                 </div>
-                <div class="col-md-8">
+                <div class="col-lg-8 col-md-7">
                     <h3 class="skill-title">Habilidades Blandas</h3>
                     <ul class="skill-list">
                         <li>Comunicación efectiva</li>
@@ -63,18 +61,16 @@
             </div>
         </section>
 
-        <section class="container my-5 formation-section">
-            <div class="row">
-                <div class="col-md-12">
-                    <h3 class="section-title mb-4">¿Cómo puedo ser un Data Scientist?</h3>
-                    <p>Para convertirse en un Data Scientist, es necesario seguir un camino que combina educación formal, habilidades técnicas, experiencia práctica y desarrollo continuo. Obtén un título en campos relacionados como Estadística, Matemáticas, Informática, o Ingeniería. Considera programas de posgrado especializados en Ciencia de Datos, Análisis de Datos o Big Data. Domina Python y R, que son fundamentales en el campo de la ciencia de datos. Familiarízate con SQL para la manipulación y consulta de bases de datos. Refuerza tus conocimientos en estadística, probabilidad, y matemáticas aplicadas. Realiza proyectos individuales que te permitan aplicar lo aprendido, como análisis de conjuntos de datos públicos. Participa en competencias de ciencia de datos como las de Kaggle para ganar experiencia y visibilidad. Busca oportunidades de internado o posiciones de nivel de entrada en empresas que utilicen análisis de datos. Trabaja en proyectos reales que te permitan enfrentar desafíos prácticos y aprender de profesionales experimentados.</p>
-                </div>
+        <section class="full-width-section formation-section">
+            <div class="full-width-text">
+                <h3 class="section-title">¿Cómo puedo ser un Data Scientist?</h3>
+                <p>Para convertirse en un Data Scientist, es necesario seguir un camino que combina educación formal, habilidades técnicas, experiencia práctica y desarrollo continuo. Obtén un título en campos relacionados como Estadística, Matemáticas, Informática, o Ingeniería. Considera programas de posgrado especializados en Ciencia de Datos, Análisis de Datos o Big Data. Domina Python y R, que son fundamentales en el campo de la ciencia de datos. Familiarízate con SQL para la manipulación y consulta de bases de datos. Refuerza tus conocimientos en estadística, probabilidad, y matemáticas aplicadas. Realiza proyectos individuales que te permitan aplicar lo aprendido, como análisis de conjuntos de datos públicos. Participa en competencias de ciencia de datos como las de Kaggle para ganar experiencia y visibilidad. Busca oportunidades de internado o posiciones de nivel de entrada en empresas que utilicen análisis de datos. Trabaja en proyectos reales que te permitan enfrentar desafíos prácticos y aprender de profesionales experimentados.</p>
             </div>
         </section>
 
-        <section class="container my-5">
+        <section class="full-width-section">
             <div class="row">
-                <div class="col-md-6 mb-4">
+                <div class="col-lg-6 mb-4">
                     <div class="info-card">
                         <img src="images/manager2.jpg" class="card-img-top" alt="Qué es un Data Scientist">
                         <div class="card-body">
@@ -84,7 +80,7 @@
                     </div>
                 </div>
                 
-                <div class="col-md-6 mb-4">
+                <div class="col-lg-6 mb-4">
                     <div class="info-card">
                         <img src="images/cientifico2.jpg" class="card-img-top" alt="Función del Data Scientist">
                         <div class="card-body">
